--- a/DIY.css
+++ b/DIY.css
@@ -1,3 +1,16 @@
 strong{
     color: cyan;
 }
+a {
+	color:#6396F0; /* 这里的颜色可以根据你的喜好进行调整 */
+}
+a:visited {
+	color: #6396FF; /* 这里的颜色可以根据你的喜好进行调整 */
+}
+a:hover {
+    color: #ff6600; /* 这里的颜色可以根据你的喜好进行调整 */
+}
+body {
+background-color: #222222; /* 背景色为黑色 */
+color: #c1c1c1; /* 文字颜色为白色 */
+}
