--- a/DIY.css
+++ b/DIY.css
@@ -2,10 +2,10 @@ strong{
     color: cyan;
 }
 a {
-	color:#6396F0; /* 这里的颜色可以根据你的喜好进行调整 */
+	color:#6294f7; /* 这里的颜色可以根据你的喜好进行调整 */
 }
 a:visited {
-	color: #6396FF; /* 这里的颜色可以根据你的喜好进行调整 */
+	color: #6294f7; /* 这里的颜色可以根据你的喜好进行调整 */
 }
 a:hover {
     color: #ff6600; /* 这里的颜色可以根据你的喜好进行调整 */
